Added fontawesome js and added warning icon to Home alerts

--- a/Home_info.html
+++ b/Home_info.html
@@ -23,8 +23,11 @@ layout: contact_sidebar
             <label class="form-check-label" for="landlordRadios2">
             No
             </label>
-            <div class="alert alert-warning d-none js-own-home-alert" role="alert">
-                <p>You may want to make sure you have permission from the homeowner or property management that you are allowed to have pets in the home, as well as identify if there are breed or weight restrictions for dogs. Not having permission does not disqualify you from fostering. If you need help getting permission from the homeowner or property management, let us know.</p>
+            <div class="alert alert-warning d-none js-own-home-alert row" role="alert">
+                <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
+                <div class="col-md-11 alert-body">
+                    <p>You may want to make sure you have permission from the homeowner or property management that you are allowed to have pets in the home, as well as identify if there are breed or weight restrictions for dogs. Not having permission does not disqualify you from fostering. If you need help getting permission from the homeowner or property management, let us know.</p>
+                </div>
             </div>
         </div>
     </div>
@@ -50,14 +53,17 @@ layout: contact_sidebar
             <label class="form-check-label" for="can_indoorsRadios3">
             Maybe
             </label>
-            <div class="alert alert-warning d-none js-indoors-alert" role="alert">
-                <h5>Foster animals need to reside indoors. Here are the expectations for housing foster animals:</h5>
-                <ul>
-                    <li>Kittens and cats in foster care should only be kept indoors, because there’s a high risk of them running away.</li>
-                    <li>Puppies (under 5 months of age) in foster care should be kept primarily indoors, but can go outside for supervised potty breaks, play time, and exercise.</li>
-                    <li>Dogs (over 5 months of age) in foster care have the same rule as puppies, and additionally can go outside for short periods of unsupervised breaks as long as you have ensured that your yard is secure.</li>
-                </ul>
-                <p>Before bringing home a foster animal, make sure it can reside indoors. If you don't think you'll be able to have your foster animal live indoors, please let us know and we may be able to help you figure out a solution.</p>
+            <div class="alert alert-warning d-none js-indoors-alert row" role="alert">
+                <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
+                <div class="col-md-11 alert-body">
+                    <p>Foster animals need to reside indoors:</p>
+                    <ul>
+                        <li>Kittens and cats in foster care should only be kept indoors, because there’s a high risk of them running away.</li>
+                        <li>Puppies (under 5 months of age) in foster care should be kept primarily indoors, but can go outside for supervised potty breaks, play time, and exercise.</li>
+                        <li>Dogs (over 5 months of age) in foster care have the same rule as puppies, and additionally can go outside for short periods of unsupervised breaks as long as you have ensured that your yard is secure.</li>
+                    </ul>
+                    <p>Before bringing home a foster animal, make sure it can reside indoors. If you don't think you'll be able to have your foster animal live indoors, please let us know and we may be able to help you figure out a solution.</p>
+                </div>
             </div>
         </div>
     </div>
