Fixes #9, no radios check by default

--- a/Animal_info.html
+++ b/Animal_info.html
@@ -179,15 +179,15 @@ layout: contact_sidebar
       </div>
     </div>
   </div>
-  
+
   <div class="d-none js-have-animals-followup">
     <div class="js-seperate-animals-selector">
       <h5>(if yes to 1st animal question) Inside your home, are you able to separate your foster animals from your own animals if needed?</h5>
       <small id="separateHelpBlock" class="form-text text-muted">
         If the foster animal has new vaccinations or becomes ill, they and your animals should be separated for each other's safety and well-being.
       </small>
-      <div class="form-check">  
-          <input class="form-check-input" aria-describedby="separateHelpBlock" type="radio" name="separateRadios" id="separateRadios1" value="Yes" checked>
+      <div class="form-check">
+          <input class="form-check-input" aria-describedby="separateHelpBlock" type="radio" name="separateRadios" id="separateRadios1" value="Yes">
           <label class="form-check-label" for="separateRadios1">
           Yes
           </label>
