--- a/Availability_info.html
+++ b/Availability_info.html
@@ -60,7 +60,7 @@ layout: contact_sidebar
             These meetings would be scheduled by you, at times and locations of your choice.
         </small>
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="adoptersRadios" id="adoptersRadios1" value="Yes" checked>
+            <input class="form-check-input" type="radio" name="adoptersRadios" id="adoptersRadios1" value="Yes">
             <label class="form-check-label" for="adoptersRadios1">
             Yes
             </label>
