--- a/_pages/Animal_info.html
+++ b/_pages/Animal_info.html
@@ -31,7 +31,7 @@ layout: contact_sidebar
 
   <div class="d-none js-have-animals-followup">
 
-    <h5>(if yes to question 1) Do any dogs live in your home?</h5>
+    <h5>Do any dogs live in your home?</h5>
     <div class="js-have-dog-selection">
       <div class="form-check">
         <input class="form-check-input" type="radio" name="dogsRadios" id="dogsRadios1" value="Yes">
@@ -50,7 +50,7 @@ layout: contact_sidebar
     {% include add_dog_info_form.html %}
 
     <div class="js-have-dog-followup d-none">
-      <h5>(if yes to dogs) Are all of your dogs spayed or neutered?</h5>
+      <h5>Are all of your dogs spayed or neutered?</h5>
       <div class="form-check">
         <input class="form-check-input" type="radio" name="dog_spayedRadios" id="dog_spayedRadios1" value="Yes">
         <label class="form-check-label" for="dog_spayedRadios1">
@@ -65,9 +65,10 @@ layout: contact_sidebar
       </div>
       {% include add_explanation.html %}
     </div>
-    <div class="js-have-dog-followup d-none">
+
+    <div class="js-have-dog-followup d-none form-group">
       <div class="js-dog-rabies-selector">
-        <h5>(if yes to dogs) Do all of the above dogs have current rabies vaccinations?</h5>
+        <h5>Do all of the above dogs have current rabies vaccinations?</h5>
         <div class="form-check">
           <input class="form-check-input" type="radio" name="dog_rabiesRadios" id="dog_rabiesRadios1" value="Yes">
           <label class="form-check-label" for="dog_rabiesRadios1">
@@ -82,7 +83,7 @@ layout: contact_sidebar
         </div>
       </div>
       <div class="alert alert-warning d-none js-dog-rabies-alert">
-        <p>(if no, disclaimer) By law in the State of Texas, all dogs must be vaccinated for rabies. You may still continue the application, but please vaccinate your dogs before bringing home a foster animal.</p>
+        <p>By law in the State of Texas, all dogs must be vaccinated for rabies. You may still continue the application, but please vaccinate your dogs before bringing home a foster animal.</p>
       </div>
       {% include add_explanation.html %}
     </div>
@@ -90,7 +91,7 @@ layout: contact_sidebar
 
 
   <div class="js-have-cat-selection js-have-animals-followup d-none">
-    <h5>(if yes to question 1) Do any cats live in your home?</h5>
+    <h5>Do any cats live in your home?</h5>
     <div class="form-check">
       <input class="form-check-input" type="radio" name="catsRadios" id="catsRadios1" value="Yes">
       <label class="form-check-label" for="catsRadios1">
@@ -111,7 +112,7 @@ layout: contact_sidebar
 
   <div class="d-none js-have-animals-followup">
     <div class="d-none js-have-cat-followup">
-      <h5>(if yes to cats) Are all of your cats spayed or neutered?</h5>
+      <h5>Are all of your cats spayed or neutered?</h5>
       <div class="form-check">
           <input class="form-check-input" type="radio" name="cat_spayedRadios" id="cat_spayedRadios1" value="Yes">
           <label class="form-check-label" for="cat_spayedRadios1">
@@ -129,7 +130,7 @@ layout: contact_sidebar
 
     <div class="d-none js-have-cat-followup">
       <div class="js-cat-rabies-selector">
-        <h5>(if yes to cats) Do all of the above cats have current rabies vaccinations?</h5>
+        <h5>Do all of the above cats have current rabies vaccinations?</h5>
         <div class="form-check">
           <input class="form-check-input" type="radio" name="cat_rabiesRadios" id="cat_rabiesRadios1" value="Yes">
           <label class="form-check-label" for="cat_rabiesRadios1">
@@ -145,7 +146,7 @@ layout: contact_sidebar
       </div>
       <div class="d-none alert alert-warning js-cat-rabies-alert">
         <p>
-          (if no, disclaimer) By law in the State of Texas, all cats must be vaccinated for rabies. You may still continue the application, but please vaccinate your cats before bringing home a foster animal.
+          By law in the State of Texas, all cats must be vaccinated for rabies. You may still continue the application, but please vaccinate your cats before bringing home a foster animal.
         </p>
       </div>
       {% include add_explanation.html %}
@@ -155,7 +156,7 @@ layout: contact_sidebar
 
   <div class="d-none js-have-animals-followup">
     <div class="js-have-other-selection">
-      <h5>(if yes to question 1) Do any other types of animals live in your home?</h5>
+      <h5>Do any other types of animals live in your home?</h5>
       <div class="form-check">
         <input class="form-check-input" type="radio" name="other_animalsRadios" id="other_animalsRadios1" value="Yes">
         <label class="form-check-label" for="other_animalsRadios1">
@@ -170,17 +171,15 @@ layout: contact_sidebar
       </div>
     </div>
 
-    <div class="js-have-other-followup d-none">
-      <div class="form-group">
-        <label for="inputAnimal_types">(if yes to other animals) Please list your other types of animals.</label>
-        <textarea class="form-control" id="inputAnimal_types" rows="3" ></textarea>
-      </div>
+    <div class="js-have-other-followup d-none form-group">
+      <label for="inputAnimal_types">Please list your other types of animals.</label>
+      <textarea class="form-control" id="inputAnimal_types" rows="3" ></textarea>
     </div>
   </div>
 
-  <div class="d-none js-have-animals-followup">
+  <div class="d-none js-have-animals-followup form-group">
     <div class="js-seperate-animals-selector">
-      <h5>(if yes to 1st animal question) Inside your home, are you able to separate your foster animals from your own animals if needed?</h5>
+      <h5>Inside your home, are you able to separate your foster animals from your own animals if needed?</h5>
       <small id="separateHelpBlock" class="form-text text-muted">
         If the foster animal has new vaccinations or becomes ill, they and your animals should be separated for each other's safety and well-being.
       </small>
@@ -204,7 +203,7 @@ layout: contact_sidebar
       </div>
     </div>
     <div class="d-none alert alert-warning js-seperate-animals-alert">
-      <span>(If no or maybe, disclaimer) It is important that you have a plan in place to separate foster pets from your pets for their safety and well-being. It can be as simple as keeping them in separate rooms, crates, or using a baby gate as a barrier. Before taking home a foster animal, please consider your options and determine how you could separate the animal if needed.</span>
+      <span>It is important that you have a plan in place to separate foster pets from your pets for their safety and well-being. It can be as simple as keeping them in separate rooms, crates, or using a baby gate as a barrier. Before taking home a foster animal, please consider your options and determine how you could separate the animal if needed.</span>
     </div>
     {% include add_explanation.html %}
   </div>
