Update css, added font awesome icons, update field formatting

--- a/Animal_info.html
+++ b/Animal_info.html
@@ -51,13 +51,13 @@ layout: contact_sidebar
       <h5>(if yes to dogs) Please fill in the information for Dog 1.</h5>
 
       <div class="form-row">
-        <div class="form-group">
+        <div class="form-group col-md-7">
           <label for="inputDog_name">Your dog's name</label>
           <input type="text" class="form-control" id="inputDog_name" placeholder=" " aria-describedby="Dog_nameHelpBlock">
         </div>
       </div>
       <div class="form-row">
-        <div class="form-group">
+        <div class="form-group col-md-2">
           <label for="inputDog_age">Your dog's age</label>
           <input type="number" class="form-control" id="inputDog_age" placeholder=" " aria-describedby="Dog_ageHelpBlock">
         </div>
@@ -164,13 +164,13 @@ layout: contact_sidebar
     <div class="animal-info d-none js-have-cat-followup">
       <h5>(if yes to cats) Please fill in the information for Cat 1.</h5>
       <div class="form-row">
-        <div class="form-group">
+        <div class="form-group col-md-7">
           <label for="inputCat_name">Your cat's name</label>
           <input type="text" class="form-control" id="inputCat_name" placeholder=" " aria-describedby="Cat_nameHelpBlock">
         </div>
       </div>
       <div class="form-row">
-        <div class="form-group">
+        <div class="form-group col-md-2">
           <label for="inputCat_age">Your cat's age</label>
           <input type="number" class="form-control" id="inputCat_age" placeholder=" " aria-describedby="Cat_ageHelpBlock">
         </div>
