--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -20,7 +20,7 @@ layout: contact_sidebar
             <label class="form-check-label" for="adoptersRadios1">
             0-3 hours
             </label>
-            <span class="js-selection-alert-text">While we won’t limit your foster choices, you’d be a great candidate for a puppy, kitten, or animal with medical or behavioral needs. They need more care than most animals, and it’s rare that foster care providers can take in these pets.</span>
+            <span class="js-selection-alert-text d-none">While we won’t limit your foster choices, you’d be a great candidate for a puppy, kitten, or animal with medical or behavioral needs. They need more care than most animals, and it’s rare that foster care providers can take in these pets.</span>
         </div>
 
         <div class="form-check">
@@ -28,23 +28,23 @@ layout: contact_sidebar
             <label class="form-check-label" for="adoptersRadios2">
             3-8 hours
             </label>
-            <span class="js-selection-alert-text">While we won’t limit your foster choices, you’d be a great candidate for an adult cat or dog with medical or behavioral needs. They need more care than most animals, and it’s rare that foster care providers can take in these pets.</span>
+            <span class="js-selection-alert-text d-none">While we won’t limit your foster choices, you’d be a great candidate for an adult cat or dog with medical or behavioral needs. They need more care than most animals, and it’s rare that foster care providers can take in these pets.</span>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios2" value="8-10 hours">
-            <label class="form-check-label" for="adoptersRadios2">
+            <input class="form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios3" value="8-10 hours">
+            <label class="form-check-label" for="adoptersRadios3">
             8-10 hours
             </label>
-            <span class="js-selection-alert-text">While we won’t limit your foster choices, you’d be a great candidate for healthy adult or senior dogs that don’t have a behavioral issues. They can generally be alone 8-10 hours at a time without problems. Also, healthy adult and senior cats can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</span>
+            <span class="js-selection-alert-text d-none">While we won’t limit your foster choices, you’d be a great candidate for healthy adult or senior dogs that don’t have a behavioral issues. They can generally be alone 8-10 hours at a time without problems. Also, healthy adult and senior cats can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</span>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios2" value="10+ hours">
-            <label class="form-check-label" for="adoptersRadios2">
+            <input class="form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios4" value="10+ hours">
+            <label class="form-check-label" for="adoptersRadios4">
             10+ hours
             </label>
-            <span class="js-selection-alert-text">Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats. They can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</span>
+            <span class="js-selection-alert-text d-none">Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats. They can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</span>
         </div>
 
         <div class="alert alert-info d-none js-left-alone-alert" role="alert">
