Added icons to alerts for yourself_info

--- a/_pages/Yourself_info.html
+++ b/_pages/Yourself_info.html
@@ -21,9 +21,11 @@ layout: contact_sidebar
           <label class="form-check-label" for="applicant_ageRadios2">
           No
           </label>
-          <div class="alert alert-danger d-none js-age-disqualifier-alert" role="alert">
-            <h2>Sorry</h2>
-            <p>Unfortunately, we cannot accept your application at this time. Please ask a member of your household who is over 18 to apply. If you are applying to fulfill volunteer hours, you can still foster and receive credit even though someone else filled out the application.</p>
+          <div class="alert alert-danger d-none js-age-disqualifier-alert row" role="alert">
+            <i class="fas fa-times-circle fa-2x fa-fw col-md-1"></i>
+            <div class="col-md-11 alert-body">
+              <p>Unfortunately, we cannot accept your application at this time. Please ask a member of your household who is over 18 to apply. If you are applying to fulfill volunteer hours, you can still foster and receive credit even though someone else filled out the application.</p>
+            </div>
           </div>
       </div>
     </div>
@@ -40,9 +42,11 @@ layout: contact_sidebar
           <label class="form-check-label" for="transportationRadios2">
           No
           </label>
-          <div class="alert alert-danger d-none js-transportation-alert" role="alert">
-            <h2>Sorry</h2>
-            <p>Unfortunately, we cannot accept your application at this time. Foster animals must receive veterinary care immediately especially in the event of an emergency, or they could experience permanent damage, trauma, or worse, could die. Please reapply if you get reliable transportation. Thank you for helping us ensure the safety of our animals, and if you would like to help in other ways, please visit <a href="http://www.austintexas.gov/department/volunteer">our volunteer page</a>.</p>
+          <div class="alert alert-danger d-none js-transportation-alert row" role="alert">
+            <i class="fas fa-times-circle fa-2x fa-fw col-md-1"></i>
+            <div class="col-md-11 alert-body">
+              <p>Unfortunately, we cannot accept your application at this time. Foster animals must receive veterinary care immediately especially in the event of an emergency, or they could experience permanent damage, trauma, or worse, could die. Please reapply if you get reliable transportation. Thank you for helping us ensure the safety of our animals, and if you would like to help in other ways, please visit <a href="http://www.austintexas.gov/department/volunteer">our volunteer page</a>.</p>
+            </div>
           </div>
       </div>
     </div>
@@ -63,8 +67,11 @@ layout: contact_sidebar
           No
           </label>
       </div>
-      <div class="alert alert-warning d-none js-medications-alert" role="alert">
-        <p>It is vital that foster animals receive their medication for their health and the health of animals around them. You may continue with the application, but if you cannot retrieve medications you should consider only short term foster periods of two weeks or less.</p>
+      <div class="alert alert-warning d-none js-medications-alert row" role="alert">
+          <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
+          <div class="col-md-11 alert-body">
+            <p>It is vital that foster animals receive their medication for their health and the health of animals around them. You may continue with the application, but if you cannot retrieve medications you should consider only short term foster periods of two weeks or less.</p>
+          </div>  
       </div>
     </div>
     <div>
@@ -84,8 +91,11 @@ layout: contact_sidebar
           No
           </label>
       </div>
-      <div class="alert alert-warning d-none js-humane-alert" role="alert">
-        <p>While we do not ask that you stop supporting other organizations, we do require that when you have one of the Austin Animal Center’s animals in your home, that you do not have foster animals from other organizations at the same time. This is to protect the health, safety, and overall well-being of the animals. If you feel that you have a special circumstance that you would like for us to consider, please let us know.</p>
+      <div class="alert alert-warning d-none js-humane-alert row" role="alert">
+          <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
+          <div class="col-md-11 alert-body">
+            <p>While we do not ask that you stop supporting other organizations, we do require that when you have one of the Austin Animal Center’s animals in your home, that you do not have foster animals from other organizations at the same time. This is to protect the health, safety, and overall well-being of the animals. If you feel that you have a special circumstance that you would like for us to consider, please let us know.</p>
+          </div>    
       </div>
     </div>
     <div>
