screwing around with radio buttons and alerts

--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -40,15 +40,27 @@ layout: contact_sidebar
         </div>
 
         <div class="form-check">
+            
+            <label class="form-check-label" for="adoptersRadios4">10+ hours
             <input class="form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios4" value="10+ hours">
-            <label class="form-check-label" for="adoptersRadios4">
-            10+ hours
             </label>
-            <span class="js-selection-alert-text d-none">Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats. They can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</span>
+            <!-- Changed below from the model of the other radios. Info icon not showing up :/ -->
+            <!-- <div class="js-selection-alert-text d-none row">
+                <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
+                <div class="col-md-11 alert-body">
+                    <p>Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats. They can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</p>
+                </div>
+            </div> -->
+            <div class="js-selection-alert-text alert d-none row" role="alert">
+                <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
+                <div class="col-md-11 alert-body">
+                    <p>Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats. They can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</p>
+                </div>
+            </div>
         </div>
 
         <div class="alert alert-info d-none js-left-alone-alert" role="alert">
-          <p class="js-left-alone-text"></p>
+            <p class="js-left-alone-text"></p>
         </div>
     </div>
     <div>
