--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -9,8 +9,8 @@ layout: contact_sidebar
 </div>
 
 <h2>Tell us about your availability</h2>
-<form class="js-form-availability">
-    <div>
+<form>
+    <div class="js-form-availability">
         <h5>On an average day, what is the longest period of time foster animals will be left alone in the home?</h5>
         <small id="adoptersHelpBlock" class="form-text text-muted">
             "Alone" means without people to monitor eating, behavior, and going to the bathroom. For example, if you work in an office from 9am-5pm but come home from 12-1pm, then the longest time period alone would be 4 hours.
