--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -10,13 +10,13 @@ layout: contact_sidebar
 
 <h2>Tell us about your availability</h2>
 <form>
-    <div class="js-left-alone-selection">
+    <div class="js-form-availability">
         <h5>On an average day, what is the longest period of time foster animals will be left alone in the home?</h5>
         <small id="adoptersHelpBlock" class="form-text text-muted">
             "Alone" means without people to monitor eating, behavior, and going to the bathroom. For example, if you work in an office from 9am-5pm but come home from 12-1pm, then the longest time period alone would be 4 hours.
         </small>
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios1" value="0-3 hours">
+            <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios1" value="0-3 hours">
             <label class="form-check-label" for="adoptersRadios1">
             0-3 hours
             </label>
@@ -24,7 +24,7 @@ layout: contact_sidebar
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios2" value="3-8 hours">
+            <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios2" value="3-8 hours">
             <label class="form-check-label" for="adoptersRadios2">
             3-8 hours
             </label>
@@ -32,7 +32,7 @@ layout: contact_sidebar
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios3" value="8-10 hours">
+            <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios3" value="8-10 hours">
             <label class="form-check-label" for="adoptersRadios3">
             8-10 hours
             </label>
@@ -40,15 +40,14 @@ layout: contact_sidebar
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios4" value="10+ hours">
-            <label class="form-check-label" for="adoptersRadios4">
-            10+ hours
-            </label>
-            <span class="js-selection-alert-text d-none">Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats. They can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</span>
-        </div>
-
-        <div class="alert alert-info d-none js-left-alone-alert" role="alert">
-          <p class="js-left-alone-text"></p>
+            <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios4" value="10+ hours">
+            <label class="form-check-label" for="adoptersRadios4">10+ hours</label>
+            <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
+                <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
+                <div class="col-md-11 alert-body">
+                    <p>Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats. They can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</p>
+                </div>
+            </div>
         </div>
     </div>
     <div>
