Updated alerts, add animal buttons
Added icons and max width to rest of alerts. Made “add a dog/cat”
buttons match the “add information” buttons

--- a/_pages/Animal_info.html
+++ b/_pages/Animal_info.html
@@ -82,8 +82,11 @@ layout: contact_sidebar
           </label>
         </div>
       </div>
-      <div class="alert alert-warning d-none js-dog-rabies-alert">
-        <p>By law in the State of Texas, all dogs must be vaccinated for rabies. You may still continue the application, but please vaccinate your dogs before bringing home a foster animal.</p>
+      <div class="alert alert-warning d-none js-dog-rabies-alert row" role="alert">
+          <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
+          <div class="col-md-11 alert-body">
+              <p>By law in the State of Texas, all dogs must be vaccinated for rabies. You may still continue the application, but please vaccinate your dogs before bringing home a foster animal.</p>
+          </div>
       </div>
       {% include add_explanation.html %}
     </div>
@@ -143,10 +146,11 @@ layout: contact_sidebar
           </label>
         </div>
       </div>
-      <div class="d-none alert alert-warning js-cat-rabies-alert">
-        <p>
-          By law in the State of Texas, all cats must be vaccinated for rabies. You may still continue the application, but please vaccinate your cats before bringing home a foster animal.
-        </p>
+      <div class="alert alert-warning d-none js-cat-rabies-alert row" role="alert">
+          <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
+          <div class="col-md-11 alert-body">
+              <p>By law in the State of Texas, all cats must be vaccinated for rabies. You may still continue the application, but please vaccinate your cats before bringing home a foster animal.</p>
+          </div>
       </div>
       {% include add_explanation.html %}
     </div>
@@ -201,8 +205,11 @@ layout: contact_sidebar
         </label>
       </div>
     </div>
-    <div class="d-none alert alert-warning js-seperate-animals-alert">
-      <span>It is important that you have a plan in place to separate foster pets from your pets for their safety and well-being. It can be as simple as keeping them in separate rooms, crates, or using a baby gate as a barrier. Before taking home a foster animal, please consider your options and determine how you could separate the animal if needed.</span>
+    <div class="alert alert-warning d-none js-seperate-animals-alert row" role="alert">
+        <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
+        <div class="col-md-11 alert-body">
+            <p>It is important that you have a plan in place to separate foster pets from your pets for their safety and well-being. It can be as simple as keeping them in separate rooms, crates, or using a baby gate as a barrier. Before taking home a foster animal, please consider your options and determine how you could separate the animal if needed.</p>
+        </div>
     </div>
     {% include add_explanation.html %}
   </div>
