--- a/_pages/Availability_info.html
+++ b/_pages/Availability_info.html
@@ -20,7 +20,12 @@ layout: contact_sidebar
             <label class="form-check-label" for="adoptersRadios1">
             0-3 hours
             </label>
-            <span class="js-selection-alert-text d-none">While we won’t limit your foster choices, you’d be a great candidate for a puppy, kitten, or animal with medical or behavioral needs. They need more care than most animals, and it’s rare that foster care providers can take in these pets.</span>
+            <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
+                <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
+                <div class="col-md-11 alert-body">
+                    <p>While we won’t limit your foster choices, you’d be a great candidate for a puppy, kitten, or animal with medical or behavioral needs. They need more care than most animals, and it’s rare that foster care providers can take in these pets.</p>
+                </div>
+            </div>
         </div>
 
         <div class="form-check">
@@ -28,7 +33,12 @@ layout: contact_sidebar
             <label class="form-check-label" for="adoptersRadios2">
             3-8 hours
             </label>
-            <span class="js-selection-alert-text d-none">While we won’t limit your foster choices, you’d be a great candidate for an adult cat or dog with medical or behavioral needs. They need more care than most animals, and it’s rare that foster care providers can take in these pets.</span>
+            <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
+                <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
+                <div class="col-md-11 alert-body">
+                    <p>While we won’t limit your foster choices, you’d be a great candidate for an adult cat or dog with medical or behavioral needs. They need more care than most animals, and it’s rare that foster care providers can take in these pets.</p>
+                </div>
+            </div>
         </div>
 
         <div class="form-check">
@@ -36,14 +46,19 @@ layout: contact_sidebar
             <label class="form-check-label" for="adoptersRadios3">
             8-10 hours
             </label>
-            <span class="js-selection-alert-text d-none">While we won’t limit your foster choices, you’d be a great candidate for healthy adult or senior dogs that don’t have a behavioral issues. They can generally be alone 8-10 hours at a time without problems. Also, healthy adult and senior cats can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</span>
+            <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
+                <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
+                <div class="col-md-11 alert-body">
+                    <p>While we won’t limit your foster choices, you’d be a great candidate for healthy adult or senior dogs that don’t have a behavioral issues. They can generally be alone 8-10 hours at a time without problems. Also, healthy adult and senior cats can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</p>
+                </div>
+            </div>
         </div>
 
         <div class="form-check">
             <input class="js-left-alone-selection form-check-input" type="radio" name="availabilityRadios" id="adoptersRadios4" value="10+ hours">
             <label class="form-check-label" for="adoptersRadios4">10+ hours</label>
             <div class="js-selection-alert-text alert alert-info d-none row" role="alert">
-                <i class="fas fa-exclamation-triangle fa-2x fa-fw col-md-1"></i>
+                <i class="fas fa-info-circle fa-2x fa-fw col-md-1"></i>
                 <div class="col-md-11 alert-body">
                     <p>Being gone for several hours is okay! While we won’t limit your foster choices, you’d be a great candidate for healthy adult and senior cats. They can usually go 10 hours or more without a care in the world as long as they have access to everything that they need.</p>
                 </div>
