Copy formatting updates
Modified text styling, modified alert copy and formatting for Home and
Yourself pages, swapped the denied icon

--- a/_pages/Home_info.html
+++ b/_pages/Home_info.html
@@ -73,9 +73,8 @@ layout: contact_sidebar
                 <div class="col-md-11 alert-body">
                     <p>Foster animals need to reside indoors:</p>
                     <ul>
-                        <li>Kittens and cats in foster care should only be kept indoors, because there’s a high risk of them running away.</li>
-                        <li>Puppies (under 5 months of age) in foster care should be kept primarily indoors, but can go outside for supervised potty breaks, play time, and exercise.</li>
-                        <li>Dogs (over 5 months of age) in foster care have the same rule as puppies, and additionally can go outside for short periods of unsupervised breaks as long as you have ensured that your yard is secure.</li>
+                        <li>Kittens and cats should only be kept indoors, because there’s a high risk of them running away.</li>
+                        <li>Puppies and dogs should be kept primarily indoors, but can go outside for potty breaks, play time, and exercise.</li>
                     </ul>
                     <p>Before bringing home a foster animal, make sure it can reside indoors. If you don't think you'll be able to have your foster animal live indoors, please let us know and we may be able to help you figure out a solution.</p>
                 </div>
